--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "view": "npx --yes -- single-page-markdown-website '*.md' --open --watch",
     "build": "lerna run build --scope @single-page-markdown-website/frontend && lerna run build --scope single-page-markdown-website",
     "clean": "lerna run --parallel --stream clean && yarn run website-clean && rm -rf '*.log'",
     "docs": "markdown-interpolate README.md",
@@ -37,8 +38,8 @@
   "single-page-markdown-website": {
     "baseUrl": "https://fluteds.github.io/pegs",
     "title": "Phil's Early Gang Society",
-    "description": "Useful Twitch information for fellow Pegs!",
-    "faviconImage": "media/favicon.svg",
+    "description": "Useful Twitch information for fellow Pegs and anyone else who is interested to know more.",
+    "faviconImage": "media/favicon.ico",
     "links": [
       {
         "text": "GitHub",
