--- a/tsconfig.shared.json
+++ b/tsconfig.shared.json
@@ -7,6 +7,9 @@
     "sourceMap": true,
     "strict": true,
     "target": "ES2020",
-    "types": ["@types/node"]
+    "types": ["@types/node"],
+    "lib": [
+      "dom"
+    ]
   }
 }
