--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "single-page-markdown-website": {
     "baseUrl": "https://fluteds.github.io/pegs",
     "title": "Phil's Early Gang Society",
-    "description": "Useful Twitch information for fellow Pegs!",
-    "faviconImage": "media/favicon.svg",
+    "description": "Useful Twitch information for fellow Pegs and anyone else who is interested to know more.",
+    "faviconImage": "media/favicon.ico",
     "links": [
       {
         "text": "GitHub",
