add chatterino backup script section new share image remove versioning remove 7tv channel links for obvious reasons

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "single-page-markdown-website": {
     "baseUrl": "https://fluteds.github.io/pegs",
     "title": "Phil's Early Gang Society",
-    "description": "Useful Twitch information for fellow Pegs and anyone else who is interested to know more.",
+    "description": "Useful Twitch information for fellow Pegs and anyone else who is interested to know more. This website is a fan made project.",
     "faviconImage": "media/favicon.ico",
     "links": [
       {
