--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: build
 
 on:
   workflow_dispatch:
-  push:     
+  push:
 
 jobs:
   build:
@@ -11,9 +11,18 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: '14'
       - run: yarn install --frozen-lockfile
       - run: yarn run lint
       - run: yarn run fix
       - run: yarn run build
+      - name: Configure Git
+        run: |
+          git config --global user.name "fluteds"
+          git config --global user.email "hi@dont-ban.me"
+          git config --global credential.helper store
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
       - run: yarn run deploy
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
